[refactor] #65 .toList()로 수정